--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,7 +22,9 @@ body {
     color: #fff;
     text-transform: uppercase;
 }
-
+.headers h1 span {
+    color: #91be14;
+}
 .request {
     width: 80%;
     margin: auto;
